# nornir_routeros

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  connections.rst  index.rst  requirements.txt  tasks.rst
nornir_routeros/: utils.py
nornir_routeros/plugins/connections/: __init__.py
nornir_routeros/plugins/tasks/: __init__.py  routeros_command.py  routeros_config_item.py  routeros_get.py
tests/: Vagrantfile  conftest.py  ros_setup.sh  router.crt  router.key  test_no_ssl.py  test_routeros_command.py  test_routeros_config_item.py  test_routeros_get.py  test_ssl_failure.py  test_ssl_verify_false.py  test_utils.py
tests/inventory/: hosts.yml  hosts_no_ssl.yml  hosts_ssl_failure.yml  hosts_ssl_verify_false.yml
