[tool.poetry]
name = "nornir_routeros"
version = "0.6.0"
description = "RouterOS API plugins for nornir"
authors = ["Devon Mar <devonm@mdmm.ca>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
RouterOS-api = "^0.17.0"
Jinja2 = "^2.11.2|^3.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4"
sphinx-rtd-theme = "^1"
sphinx-autodoc-typehints = "^1"
nornir = "^3"
pytest = "^7"
pytest-cov = "^4"
flake8 = "^4"
black = { version = "^22", python = "^3.7" }
isort = { version = "^5", python = "^3.7" }
flake8-isort = "^4"

[tool.poetry.plugins."nornir.plugins.connections"]
"routerosapi" = "nornir_routeros.plugins.connections:RouterOsApi"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
