[tool.poetry]
name = "nornir_routeros"
version = "0.6.0"
description = "RouterOS API plugins for nornir"
authors = ["Devon Mar <devonm@mdmm.ca>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
RouterOS-api = "^0.17.0"
Jinja2 = "^2.11.2|^3.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4"
sphinx-rtd-theme = "^1"
sphinx-autodoc-typehints = "^1"
nornir = "^3"
pytest = "^7"
pytest-cov = { version = "^5", python = "^3.8" }
ruff = { version = "^0.4", python = "^3.7" }

[tool.poetry.plugins."nornir.plugins.connections"]
"routerosapi" = "nornir_routeros.plugins.connections:RouterOsApi"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
  "C4",
  "E",
  "EXE",
  "F",
  "I",
  "ISC",
  "PERF",
  "PIE",
  "PYI",
  "UP",
  "W",
]
ignore = [
  "E501",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
