[project]
name = "nornir_routeros"
version = "0.7.0"
description = "RouterOS API plugins for nornir"
authors = [
  {name = "Devon Mar", email = "devon-mar@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "routeros-api~=0.18.0",
  "Jinja2>=2.11.2,<4.0",
]

[dependency-groups]
dev = [
  "sphinx~=8.0; python_version >= '3.10'",
  "sphinx-rtd-theme~=3.0; python_version >= '3.10'",
  "sphinx-autodoc-typehints~=3.0; python_version >= '3.10'",
  "nornir~=3.5.0",
  "pytest~=7.0",
  "pytest-cov~=6.0",
  "ruff~=0.9.0",
  ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["nornir_routeros"]

[project.entry-points."nornir.plugins.connections"]
routerosapi = "nornir_routeros.plugins.connections:RouterOsApi"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
  "C4",
  "E",
  "EXE",
  "F",
  "I",
  "ISC",
  "PERF",
  "PIE",
  "PYI",
  "UP",
  "W",
]
ignore = [
  "E501",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
